--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     <span style="color: rgb(39, 39, 39);">cat ./me.txt</span>
                     <p>昵称：字节君 &amp; Bytelv.</p>
                     <p>性别：是个男的</p>
-                    <p>年龄：莫问哥几岁，哥永远18岁（还没有18岁🥰）</p>
+                    <p>年龄：莫问哥几岁，哥情绪挺碎（还没有18岁🥰）</p>
                     <p>地   址：广东佛山</p>
                     <p>邮箱：2015078351@qq.com</p>
                     <p style="color: red;">--------------------------------------</p>
